--- a/styles/main.css
+++ b/styles/main.css
@@ -1,5 +1,7 @@
 /* Site Font */
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200..1000;1,200..1000&display=swap');
 
 /* General Settings */
 * {
@@ -15,18 +17,44 @@
     --title-color: #202336;
     --transition: .4s;
     --primary-font: 'Inter';
+    --secondary-font: 'Playfair Display';
+    --thirdy-font: 'Mulish';
 }
 
 body {
     font-family: var(--primary-font);
 }
 
-ul,ol {
+.thirdy-font {
+    font-family: var(--thirdy-font);
+}
+
+.w-max-content {
+    width: max-content !important;
+}
+
+ul,
+ol {
     padding: 0 !important;
     margin: 0 !important;
 }
 
-button{
+.h1,
+.h2,
+.h3,
+.h4,
+.h5,
+.h6,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    margin-bottom: 0 !important;
+}
+
+button {
     background-color: transparent !important;
 }
 
@@ -37,6 +65,10 @@ button{
 
 .transition {
     transition: var(--transition);
+}
+
+.secondary-font {
+    font-family: var(--secondary-font);
 }
 
 .fw-500 {
@@ -51,7 +83,55 @@ button{
     color: var(--title-color) !important;
 }
 
-.btn:hover ,
+.hvr-radial-out {
+    display: inline-block;
+    vertical-align: middle;
+    -webkit-transform: perspective(1px) translateZ(0);
+    transform: perspective(1px) translateZ(0);
+    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+    position: relative;
+    overflow: hidden;
+    background: #e1e1e1;
+    -webkit-transition-property: color;
+    transition-property: color;
+    -webkit-transition-duration: 0.3s;
+    transition-duration: 0.3s;
+}
+
+.hvr-radial-out:before {
+    content: "";
+    position: absolute;
+    z-index: -1;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: var(--bs-primary);
+    border-radius: 100%;
+    -webkit-transform: scale(0);
+    transform: scale(0);
+    -webkit-transition-property: transform;
+    transition-property: transform;
+    -webkit-transition-duration: 0.3s;
+    transition-duration: 0.3s;
+    -webkit-transition-timing-function: ease-out;
+    transition-timing-function: ease-out;
+}
+
+.hvr-radial-out:hover,
+.hvr-radial-out:focus,
+.hvr-radial-out:active {
+    color: white !important;
+}
+
+.hvr-radial-out:hover:before,
+.hvr-radial-out:focus:before,
+.hvr-radial-out:active:before {
+    -webkit-transform: scale(2);
+    transform: scale(2);
+}
+
+.btn:hover,
 .btn:focus,
 .btn:focus-visible,
 .btn:focus-within,
@@ -65,4 +145,47 @@ button{
 /* Header */
 .header .primary-hover:hover {
     font-weight: 600;
+}
+
+/* Header Intro */
+.plusAnimation {
+    top: 15px;
+    animation: plusAnimation infinite 2s linear alternate;
+}
+
+.big-circle {
+    width: 26px;
+    height: 26px;
+    left: 60px;
+    top: 50%;
+    animation: circleAnimation infinite 2s linear alternate;
+}
+
+.small-circle {
+    width: 20px;
+    height: 20px;
+    left: 50%;
+    bottom: 0;
+    animation: circleAnimation infinite 2s linear alternate;
+}
+
+@keyframes circleAnimation {
+    0% {
+        transform: rotate(360deg);
+    }
+}
+
+
+@keyframes plusAnimation {
+    0% {
+        transform: rotate(0);
+    }
+
+    50% {
+        transform: rotate(360deg);
+    }
+
+    100% {
+        transform: rotate(0);
+    }
 }
