--- a/styles/breakpoints.css
+++ b/styles/breakpoints.css
@@ -4,6 +4,12 @@
     }
 }
 
+@media (min-width: 1600px) {
+    .destination .plusAnimation {
+        left: 160px;
+    }
+}
+
 @media (max-width:400px) {
     .modal-dialog .nav-btns {
         display: flex !important;
