--- a/styles/main.css
+++ b/styles/main.css
@@ -64,6 +64,14 @@ button {
     font-size: 14px;
 }
 
+.fs-22px {
+    font-size: 22px;
+}
+
+.fs-18px {
+    font-size: 18px;
+}
+
 .title-color {
     color: var(--title-color);
 }
@@ -227,4 +235,43 @@ button {
 .destination .small-circle:nth-last-child(1) {
     bottom: -40px;
     left: 46%;
+}
+
+/* Testimonial */
+.testimonial .swiper {
+    max-width: 384px;
+    width: 100%;
+}
+
+.testimonial .swiper-slide {
+    max-width: 384px;
+    width: 100%;
+}
+
+.testimonial .swiper-button-next::after,
+.testimonial .swiper-button-prev::after {
+    content: '';
+}
+
+.testimonial .swiper-button-next i,
+.testimonial .swiper-button-prev i{
+    font-size: 20px;
+    color: black;
+    border-radius: 50%;
+    padding: 7px;
+    border: 2px solid black;
+}
+
+.testimonial .col-xl-5 .big-circle {
+    width: 42px;
+    height: 42px;
+    top: -20px;
+    left: 84.5%;
+}
+
+.testimonial .col-xl-5 .plusAnimation {
+    width: 32px;
+    height: 32px;
+    left: 7.5%;
+    top: 96.1%;
 }
