--- a/styles/main.css
+++ b/styles/main.css
@@ -1,7 +1,5 @@
 /* Site Font */
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200..1000;1,200..1000&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
 /* General Settings */
 * {
@@ -14,20 +12,13 @@
 }
 
 :root {
-    --title-color: #202336;
-    --footer-text-color: #848484;
+    --title-color: #919191;
     --transition: .4s;
-    --primary-font: 'Inter';
-    --secondary-font: 'Playfair Display';
-    --thirdy-font: 'Mulish';
+    --primary-font: 'Poppins';
 }
 
 body {
     font-family: var(--primary-font);
-}
-
-.thirdy-font {
-    font-family: var(--thirdy-font);
 }
 
 .w-max-content {
@@ -56,10 +47,6 @@ p {
     margin-bottom: 0 !important;
 }
 
-.footer-text-color {
-    color: var(--footer-text-color) !important;
-}
-
 button {
     background-color: transparent !important;
 }
@@ -69,13 +56,22 @@ button {
     font-size: 14px;
 }
 
-.fs-22px {
-    font-size: 22px;
+.fs-8 {
+    font-size: 75px;
 }
 
-.fs-18px {
-    font-size: 18px;
+
+.fs-9 {
+    font-size: 80px;
 }
+.fs-10 {
+    font-size: 70px;
+}
+
+.fs-11 {
+    font-size: 100px;
+}
+
 
 .title-color {
     color: var(--title-color);
@@ -85,10 +81,6 @@ button {
     transition: var(--transition);
 }
 
-.secondary-font {
-    font-family: var(--secondary-font);
-}
-
 .fw-500 {
     font-weight: 500;
 }
@@ -96,57 +88,12 @@ button {
 .fw-600 {
     font-weight: 600;
 }
+.text-third {
+    color: #919191;
+}
 
 .primary-hover:hover {
-    color: var(--title-color) !important;
-}
-
-.hvr-radial-out {
-    display: inline-block;
-    vertical-align: middle;
-    -webkit-transform: perspective(1px) translateZ(0);
-    transform: perspective(1px) translateZ(0);
-    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
-    position: relative;
-    overflow: hidden;
-    background: #e1e1e1;
-    -webkit-transition-property: color;
-    transition-property: color;
-    -webkit-transition-duration: 0.3s;
-    transition-duration: 0.3s;
-}
-
-.hvr-radial-out:before {
-    content: "";
-    position: absolute;
-    z-index: -1;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background: var(--bs-primary);
-    border-radius: 100%;
-    -webkit-transform: scale(0);
-    transform: scale(0);
-    -webkit-transition-property: transform;
-    transition-property: transform;
-    -webkit-transition-duration: 0.3s;
-    transition-duration: 0.3s;
-    -webkit-transition-timing-function: ease-out;
-    transition-timing-function: ease-out;
-}
-
-.hvr-radial-out:hover,
-.hvr-radial-out:focus,
-.hvr-radial-out:active {
-    color: white !important;
-}
-
-.hvr-radial-out:hover:before,
-.hvr-radial-out:focus:before,
-.hvr-radial-out:active:before {
-    -webkit-transform: scale(2);
-    transform: scale(2);
+    color: var(--bs-primary) !important;
 }
 
 .btn:hover,
@@ -160,136 +107,192 @@ button {
     box-shadow: none !important;
 }
 
+.btn.btn-secondary:hover,
+.btn.btn-secondary:focus,
+.btn.btn-secondary:focus-visible,
+.btn.btn-secondary:focus-within,
+.btn.btn-secondary:visited,
+.btn.btn-secondary:target,
+.btn.btn-secondary:active {
+    border-color: var(--bs-secondary) !important;
+    box-shadow: none !important;
+}
+
+.hvr-secondary {
+    display: inline-block;
+    vertical-align: middle;
+    -webkit-transform: perspective(1px) translateZ(0);
+    transform: perspective(1px) translateZ(0);
+    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+    position: relative;
+    background: var(--bs-secondary);
+    -webkit-transition-property: color;
+    border-radius: 12px;
+
+    transition-property: color;
+    -webkit-transition-duration: 0.3s;
+    transition-duration: 0.3s;
+}
+
+.hvr-secondary:before {
+    content: "";
+    position: absolute;
+    z-index: -1;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: black;
+    border: 1px solid var(--bs-secondary);
+    border-radius: 12px;
+    -webkit-transform: scale(1);
+    transform: scale(1);
+    -webkit-transition-property: transform;
+    transition-property: transform;
+    -webkit-transition-duration: 0.3s;
+    transition-duration: 0.3s;
+    -webkit-transition-timing-function: ease-out;
+    transition-timing-function: ease-out;
+}
+
+.hvr-secondary:hover,
+.hvr-secondary:focus,
+.hvr-secondary:active {
+    color: white !important;
+    border-color: var(--bs-primary);
+}
+
+.hvr-secondary:hover:before,
+.hvr-secondary:focus:before,
+.hvr-secondary:active:before {
+    -webkit-transform: scale(0);
+    transform: scale(0);
+}
+
+.hvr-primary {
+    display: inline-block;
+    vertical-align: middle;
+    -webkit-transform: perspective(1px) translateZ(0);
+    transform: perspective(1px) translateZ(0);
+    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+    position: relative;
+    background: black !important;
+    border: 1px solid var(--bs-primary);
+    -webkit-transition-property: color;
+    border-radius: 10px;
+    transition-property: color;
+    -webkit-transition-duration: 0.3s;
+    transition-duration: 0.3s;
+}
+
+.hvr-primary:before {
+    content: "";
+    position: absolute;
+    z-index: -1;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: var(--bs-primary) !important;
+    border-radius: 8px;
+    -webkit-transform: scale(1);
+    transform: scale(1);
+    -webkit-transition-property: transform;
+    transition-property: transform;
+    -webkit-transition-duration: 0.3s;
+    transition-duration: 0.3s;
+    -webkit-transition-timing-function: ease-out;
+    transition-timing-function: ease-out;
+}
+
+.hvr-primary:hover,
+.hvr-primary:focus,
+.hvr-primary:active {
+    color: var(--bs-secondary) !important;
+    border-color: var(--bs-secondary) !important;
+}
+
+.hvr-primary:hover:before,
+.hvr-primary:focus:before,
+.hvr-primary:active:before {
+    -webkit-transform: scale(0);
+    transform: scale(0);
+}
+
 /* Header */
-.header .primary-hover:hover {
-    font-weight: 600;
+.dropdown-arrow::after {
+    border-bottom: 2px solid #999;
+    border-right: 2px solid #999;
+    border-left: initial !important;
+    border-top: initial !important;
+    content: "";
+    display: block;
+    height: 6px;
+    margin-top: -4px;
+    pointer-events: none;
+    position: absolute;
+    right: 2px;
+    top: 55%;
+    transform-origin: 66% 66%;
+    transform: rotate(45deg);
+    transition: all .25s ease-in-out;
+    width: 6px;
+}
+
+.primary-hover:hover.dropdown-arrow::after {
+    border-color: var(--bs-primary);
+}
+
+.dropdown-arrow.show::after {
+    transform: rotate(-135deg);
 }
 
 /* Header Intro */
-.plusAnimation {
-    top: 15px;
-    animation: plusAnimation infinite 2s linear alternate;
+.intro-title {
+    font-size: 112px;
 }
 
-.big-circle {
-    width: 26px;
-    height: 26px;
-    left: 60px;
-    top: 50%;
-    animation: circleAnimation infinite 2s linear alternate;
+.intro-title-liner {
+    font-size: 112px;
+    background: linear-gradient(90deg, #FE6783 1.9%, #FFBF84 97.1%);
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
 
-.small-circle {
-    width: 20px;
-    height: 20px;
-    left: 50%;
-    bottom: 0;
-    animation: circleAnimation infinite 2s linear alternate;
-}
-
-@keyframes circleAnimation {
-    0% {
-        transform: rotate(360deg);
-    }
+.link-wrap {
+    background: #0D0D0D;
+    padding: 33px 45px 0 45px;
 }
 
 
-@keyframes plusAnimation {
-    0% {
-        transform: rotate(0);
-    }
-
-    50% {
-        transform: rotate(360deg);
-    }
-
-    100% {
-        transform: rotate(0);
-    }
+.link-wraper {
+    background: #0D0D0D;
+    padding: 34px 29px;
+    height: 100%;
 }
 
-/* New Way */
-.new-way .plusAnimation {
-    top: initial;
-    bottom: 85px;
-    left: 17px;
+.link-a {
+    font-family: Poppins;
+    font-size: 30px;
+    font-weight: 400;
+    line-height: 45px;
+    text-align: left;
+    color: #0FC65C;
 }
 
-.new-way .small-circle {
-    left: initial;
-    bottom: 33%;
-    right: 20%;
+.help {
+    background: url(../img/help.png) no-repeat center/cover;
+    height: 799px;
 }
 
-/* Destination */
-.destination .destination-img {
-    border-radius: 10px 10px 10px 0;
+.mobile {
+    width: 721px !important;
 }
 
-.destination .plusAnimation {
-    left: 20px;
-    top: 70%;
-}
 
-.destination .small-circle:nth-child(1) {
-    top: -30px;
-    right: 15%;
-    left: initial;
-}
 
-.destination .small-circle:nth-last-child(1) {
-    bottom: -40px;
-    left: 46%;
-}
 
-/* Testimonial */
-.testimonial .swiper {
-    max-width: 384px;
-    width: 100%;
-}
 
-.testimonial .swiper-slide {
-    max-width: 384px;
-    width: 100%;
-}
 
-.testimonial .swiper-button-next::after,
-.testimonial .swiper-button-prev::after {
-    content: '';
-}
-
-.testimonial .swiper-button-next i,
-.testimonial .swiper-button-prev i{
-    font-size: 20px;
-    color: black;
-    border-radius: 50%;
-    padding: 7px;
-    border: 2px solid black;
-}
-
-.testimonial .col-xl-5 .big-circle {
-    width: 42px;
-    height: 42px;
-    top: -20px;
-    left: 84.5%;
-}
-
-.testimonial .col-xl-5 .plusAnimation {
-    width: 32px;
-    height: 32px;
-    left: 7.5%;
-    top: 96.1%;
-}
 
 /* footer */
-.footer {
-    background-color: #F9F9FB;
-    padding-top: 78px;
-    padding-bottom: 32px;
-}
-
-.footer hr {
-    margin-top: 80px;
-    margin-bottom: 30px;
-    height: 3px;
-}
